Updated with Local Machine

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/employee
 spring.datasource.username=amitvikram
-spring.datasource.password=admin
+spring.datasource.password=PassWord
 spring.jpa.show-sql=true
 spring.datasource.driverClassName=org.postgresql.Driver
 ## Hibernate Properties
