--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.ems</groupId>
-    <artifactId>employee-management</artifactId>
+    <artifactId>SecureHR-Backend-Architecture</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>employee-management</name>
-    <description>employee-management</description>
+    <name>SecureHR-Backend-Architecture</name>
+    <description>SecureHR-Backend-Architecture</description>
     <properties>
         <java.version>21</java.version>
     </properties>
